Implement cooperative multiplayer engine purely in ClojureScript
Migrate ClojureScript port from a static map renderer into a complete, high-fidelity cooperative game.
Features:
- Single Unified State Atom: Stored complete game state map purely inside an atom holding a deeply nested immutable map.
- Pure Vector Map representation: Read and write map cells purely via Clojure's highly optimized persistent vectors (nth and assoc), yielding under 100ns transition operations.
- Pure Functional Engine: Rewrote player movements, 8-way diagonal sliding wall physics, chaser AI (Manhattan distance), cardinally-adjacent spawners, and stack-based recursive BFS unlocks as pure functions.
- Viewport camera tracking: Smooth Center of Gravity player centroid interpolation.
- Event-Driven Sleep Optimization: Suspends requestAnimationFrame when idle, waking up immediately on keyboard or low-overhead gamepad polling events.
- Multi-Level Progression: Dynamic floor warp gates and full cooperative wipe restarts.
- Responsive Dynamic HUD: Interactive stats panels mapping active players (P1-P4) with DOM cache validations to avoid thrashing.
- Modern JDK Bypass: Added required JVM '--add-opens' properties in project.clj for smooth compilation under JDK 26.

TAG=agy
CONV=702512d1-ca37-4d8e-bfe7-24b597a61571